Fixed more-less btn, darkened icons, labels, contrasts in individual page

--- a/webapp/src/main/webapp/css/individual/individual.css
+++ b/webapp/src/main/webapp/css/individual/individual.css
@@ -246,7 +246,7 @@ a.more-less {
 }
 a:hover.more-less {
     color: #fff;
-    background: #888;
+    background: #656565;
 }
 /* VERBOSE DISPLAY------>  */
 section.verbosePropertyListing {
