--- a/webapp/src/main/webapp/themes/vitro/css/vitroTheme.css
+++ b/webapp/src/main/webapp/themes/vitro/css/vitroTheme.css
@@ -1217,7 +1217,7 @@ img.individual-photo {
 }
 ul#individual-tools-people {
     border-bottom: 1px solid #e8ece9;
-    color: #47b6d0;
+    color: #334144;
 }
 ul#individual-tools {
     color: #536520
